MAQUETACION DE VISTA DE CATALOGO, LISTO

--- a/contacto.html
+++ b/contacto.html
@@ -19,6 +19,6 @@
 </style>
 </head>
 <body>
-  <h1 class="gradient-text">Texto con gradiente</h1>
+  <h1 class="gradient-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti voluptate nam, velit qui laudantium id. Sequi a rerum eveniet dolor, dignissimos quam inventore. Error!</h1>
 </body>
 </html>
