maquetación contacto.html con estilizado

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <ul class="d-flex justify-content-center align-items-center m-0 p-0">
                     <li><a href="index.html" class="nav-link active" aria-current="page">Home</a></li>
                     <li><a href="#" class="nav-link">Productos</a></li>
-                    <li><a href="#" class="nav-link">Acerca de Nosotros</a></li>
+                    <li><a href="contacto.html" class="nav-link">Contacto</a></li>
                 </ul>
             </nav>
             <a href="#" class="col-1 btn-buy p-2">Compra ya!</a>
@@ -114,7 +114,7 @@
             <ul class="p-0 m-0 d-flex flex-column gap-2">
                 <li><a href="index.html" class="footer-nav-links active" aria-current="page">Home</a></li>
                 <li><a href="#" class="footer-nav-links">Productos</a></li>
-                <li><a href="#" class="footer-nav-links">Contactos</a></li>
+                <li><a href="contacto.html" class="footer-nav-links">Contacto</a></li>
             </ul>
         </nav>
         <div class="col-4 footer-contact d-flex flex-column justify-content-start align-items-start gap-2">
