edición del nav bar en ambas páginas

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <nav class="container col-6 ms-5 e-0">
                 <ul class="d-flex justify-content-center align-items-center m-0 p-0">
                     <li><a href="index.html" class="nav-link active" aria-current="page">Home</a></li>
-                    <li><a href="#" class="nav-link">Productos</a></li>
+                    <li><a href="productos.html" class="nav-link">Productos</a></li>
                     <li><a href="contacto.html" class="nav-link">Contacto</a></li>
                 </ul>
             </nav>
@@ -113,7 +113,7 @@
             <h3 class="fs-5">Enlaces Rápidos</h3>
             <ul class="p-0 m-0 d-flex flex-column gap-2">
                 <li><a href="index.html" class="footer-nav-links active" aria-current="page">Home</a></li>
-                <li><a href="#" class="footer-nav-links">Productos</a></li>
+                <li><a href="productos.html" class="footer-nav-links">Productos</a></li>
                 <li><a href="contacto.html" class="footer-nav-links">Contacto</a></li>
             </ul>
         </nav>
