--- a/contacto.html
+++ b/contacto.html
@@ -16,7 +16,7 @@
     <header class="container-fluid col-12 p-0" id="hd-home">
         <div class="nav-bar container-fluid col-12 d-flex justify-content-between align-items-center p-2 px-4 m-0">
             <div class="logo col-4 d-flex justify-content-start align-items-center">
-                <img src="/assets/img/motorProyect-logo.png" alt="" class="col-2">
+                <img src="assets/img/motorProyect-logo.png" alt="" class="col-2">
                 <span class="col-6 fs-3 text ms-2">Motor Proyect</span>
             </div>
             <nav class="container col-6 ms-5 e-0">
@@ -33,7 +33,7 @@
             <p class="presentation col-6 presentation-contact text-center mb-3">
             Somos especialistas en motos usadas con más de 15 años de experiencia, ayudando a moteros a encontrar su compañera de ruta perfecta <br> 
             </p>
-            <img src="/assets/img/about-team(1).jpg" class="col-8 rounded-4 my-5 img-banner-contact" alt="">
+            <img src="assets/img/about-team(1).jpg" class="col-8 rounded-4 my-5 img-banner-contact" alt="">
         </div>
     </header>
     <main>
@@ -103,7 +103,7 @@
     </section>
     <footer class="container-fluid col-12 d-flex flex-row justify-content-between align-items-center p-5 flex-wrap">
         <div class="col-4 footer-logo d-flex flex-column justify-content-center align-items-start gap-2">
-            <img src="/assets/img/motorProyect-logo.png" alt="">
+            <img src="assets/img/motorProyect-logo.png" alt="">
             <p>
                 Tu tienda de confianza en motos usadas. <br>
                 Calidad, garantía y servicio en cada compra.
